# agentic-redteam-radar

./: .bandit  .coveragerc  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .production_config.json  .safety-policy.json  .yamllint.yml  AUTONOMOUS_EXECUTION_COMPLETE_FINAL.md  AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_FINAL_REPORT.json  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_SUMMARY.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_REPORT.md  GOVERNANCE.md  Makefile  PERFORMANCE_BENCHMARKS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_FINAL.md  PRODUCTION_DEPLOYMENT_FINAL_REPORT.json  PRODUCTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_README.md  PROJECT_CHARTER.md  README.md  SECURITY.md  SECURITY_ANALYSIS.md  basic_test_simple.py  basic_working_test.py  (+51 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-attach.sh  post-create.sh  post-start.sh  setup.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
deployment/: .env.example  Dockerfile.production  README.md  docker-compose.prod.yml  docker-compose.production.yml
deployment/k8s/: radar-deployment.yml
deployment/kubernetes/: radar-deployment.yaml  radar-production.yaml
deployment/nginx/: nginx.conf
deployment/production/: Dockerfile  docker-compose.yml  entrypoint.sh  healthcheck.py  kubernetes.yml  nginx.conf
deployment/scripts/: entrypoint.sh
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ROADMAP.md
docs/architecture/: README.md
docs/architecture/decisions/: ADR-0001-project-architecture-framework.md  ADR-0002-attack-pattern-plugin-system.md  ADR-0003-security-scanning-integration.md  ADR-0004-monitoring-and-observability-stack.md  ADR-0005-testing-strategy-and-framework.md
docs/deployment/: README.md
docs/monitoring/: observability-framework.md
docs/performance/: benchmarking-and-profiling.md
docs/quality/: technical-debt-tracking.md
docs/repository/: BRANCH_PROTECTION.md  PERFORMANCE_MONITORING.md  RELEASE_AUTOMATION.md
docs/security/: sbom-generation.md  security-scanning-framework.md
docs/testing/: README.md
docs/workflows/: CI-CD-SETUP.md  WORKFLOW-SETUP.md  advanced-ci-templates.md  deployment-strategies.md
docs/workflows/templates/: ci.yml  release.yml  security.yml
examples/: basic_example.py  basic_scan.py  basic_working_example.py  comprehensive_example.py  production_deployment.py  production_deployment_example.py  production_example.py  production_simple_example.py  simple_scan_demo.py
monitoring/: alert_rules.yml  prometheus.yml
scripts/: build.sh  init-db.sql
src/agentic_redteam/: __init__.py  agent.py  cli.py  config.py  config_simple.py  results.py  scanner.py  simple_scanner.py
src/agentic_redteam/api/: __init__.py  app.py  middleware.py  routes.py
src/agentic_redteam/attacks/: __init__.py  base.py  chain_of_thought.py  info_disclosure.py  policy_bypass.py  prompt_injection.py
src/agentic_redteam/cache/: __init__.py  backends.py  (+2 more)
tests/: conftest.py
tests/e2e/: test_example.py
tests/fixtures/: __init__.py  agents.py
tests/integration/: test_example.py  test_full_scan.py
tests/mocks/: __init__.py  api_clients.py
tests/performance/: README.md  __init__.py  conftest.py  test_attack_patterns_performance.py  test_scanner_performance.py
tests/unit/: test_attacks.py  test_example.py  test_scanner.py
tests/utils/: __init__.py  helpers.py
(+46 files in other folders)
